--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Don't check in the lockfile; this is pinned in guix
+Gemfile.lock
