--- a/lib/config/database.yml
+++ b/lib/config/database.yml
@@ -5,7 +5,7 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= ENV.fetch("HOME") %>/kitchen-development.db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
